# gateway

./: Cargo.toml  README.md  schema.sql
analytics-stub/: Cargo.toml
analytics-stub/src/: lib.rs
gateway-api/: Cargo.toml
gateway-api/src/: analytics.rs  lib.rs  log.rs  robots.txt  util.rs
src/: geoip.rs  main.rs  uaparser.rs  util.rs
src/route/: analytics.rs  mod.rs  newsletter.rs
src/service/: geoip.rs  mod.rs  newsletter.rs  property.rs  uaparser.rs
