[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
analytics-stub = { path = "analytics-stub" }
anyhow = "1.0.89"
axum = { version = "0.7.7", features = ["json"] }
axum-auth = "0.7.0"
chrono = "0.4.38"
envy = "0.4.2"
flate2 = "1.0.34"
maxminddb = "0.24.0"
regex = "1.11.0"
reqwest = { version = "0.12.8", features = ["stream"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tower_governor = { version = "0.4.3", features = ["tracing"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uaparser = "0.6.4"
uuid = { version = "1.11.0", features = ["v4"] }

[profile.release]
strip = true
lto = true
