[package]
name = "gateway-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
axum-client-ip = "0.6.1"
chrono = "0.4.38"
futures = "0.3.31"
futures-util = "0.3.31"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["signal"] }
tower = "0.5.1"
tracing = "0.1.40"
