[package]
name = "gateway-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.3"
axum-client-ip = "0.7.0"
chrono = "0.4.40"
envy = "0.4.2"
futures = "0.3.31"
futures-util = "0.3.31"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["signal"] }
tower = "0.5.2"
tracing = "0.1.41"
